--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "roam-depot-example",
-  "version": "1.0.0",
+  "name": "roam-depot-tag-painter",
+  "version": "0.1.0",
   "description": "Roam Research Plugin Example",
   "main": "index.js",
   "scripts": {
@@ -13,9 +13,15 @@
   "license": "MIT",
   "author": "Matt Vogel",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.2.1",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "roamjs-scripts": "^0.22.1"
   },
   "dependencies": {
+    "roamjs-components": "^0.73.9"
   }
 }
