--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.2.1",
+    "roamjs-scripts": "^0.22.1",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "roamjs-scripts": "^0.22.1"
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "react-color": "^2.19.3",
     "roamjs-components": "^0.73.9"
   }
 }
